--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/anhthang/soaring-symbols#readme",
   "devDependencies": {
+    "jsdom": "^27.0.0",
     "lodash.sortby": "^4.7.0",
     "slugify": "^1.6.6"
   },
