--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soaring-symbols",
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0-alpha.3",
   "description": "A curated collection of airline branding assets — logos, icons, and tail designs in SVG format.",
   "main": "index.js",
   "module": "index.js",
@@ -32,7 +32,10 @@
     "travel"
   ],
   "exports": {
-    ".": "./index.js",
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./index.js"
+    },
     "./assets/*": "./assets/*"
   },
   "files": [
@@ -41,6 +44,7 @@
     "index.js",
     "index.d.ts",
     "scripts/",
+    "utils/",
     "API.md",
     "README.md",
     "LICENSE"
@@ -52,10 +56,12 @@
     "lint:svg": "node scripts/lint-svg.js",
     "generate": "node scripts/generate.js"
   },
+  "dependencies": {
+    "slugify": "^1.6.6"
+  },
   "devDependencies": {
     "@types/jsdom": "^27.0.0",
     "jsdom": "^27.0.1",
-    "lodash.sortby": "^4.7.0",
-    "slugify": "^1.6.6"
+    "lodash.sortby": "^4.7.0"
   }
 }
